# dde-session-shell

./: .gitignore  .syncexclude  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  lupdate.sh  resources.qrc
.reuse/: dep5
.tx/: config  transifex.yaml
archlinux/: PKGBUILD
cmake/: DdeSessionShellConfig.cmake
configs/: com.deepin.dde.dde-lock.dconfig.json  com.deepin.dde.lightdm-deepin-greeter.dconfig.json  org.deepin.dde.lightdm-deepin-greeter.json  org.deepin.dde.lock.json  org.deepin.greeter.json  org.deepin.lock.json
debian/: changelog  control  dde-gesture-login.install  dde-gesture-login.postinst  dde-gesture-login.sysusers  dde-lock.1  dde-session-shell.install  dde-session-shell.lintian-overrides  dde-session-shell.postinst  dde-session-shell.preinst  deepin-greeter-wayland.install  deepin-greeter-wayland.postinst  postinst  rules
docs/: development-guide.md
files/: 50-deepin.conf  com.deepin.dde.lockFront.service  com.deepin.dde.sessionshell.gschema.xml  com.deepin.dde.shutdownFront.service  dde-lock-loader-wrapper  dde-lock-wrapper  dde-lock.desktop  dde-session-shell.conf  dde-session-ui.conf.in  dde-shutdown-wapper  dde-shutdown.desktop  deepin-greeter  launch-binary  pre-greeter
interface/: base_module_interface.h  login_module_interface.h  login_module_interface_v2.h  tray_module_interface.h
lighter-greeter/: CMakeLists.txt  lighterbackground.cpp  lighterbackground.h  lightergreeter.cpp  lightergreeter.h  lighterscreenmanager.cpp  lighterscreenmanager.h  main.cpp
modules/: CMakeLists.txt
modules/examples/network/: CMakeLists.txt  network_module.cpp  network_module.h
modules/login/: CMakeLists.txt  login_module.cpp  login_module.h
plugins/: CMakeLists.txt
plugins/assist_login/: CMakeLists.txt  assist_login_module.cpp  assist_login_module.h  assist_login_widget.cpp  assist_login_widget.h  assist_login_work.cpp  assist_login_work.h  login.json  socketHelper.cpp  socketHelper.h
plugins/assist_login/interface/: CMakeLists.txt
plugins/assist_login/interface/include/: assist_login_interface.h
plugins/assist_login/interface/src/: assist_login_interface.cpp
plugins/examples/login-plugins/login-basic/: CMakeLists.txt  login_module.cpp  login_module.h
plugins/hw-auto-login/: CMakeLists.txt  login_module.cpp  login_module.h
plugins/login-gesture/: CMakeLists.txt  gesture.qrc  lupdate.sh
plugins/login-gesture/configs/: login-gesture.json  org.deepin.dde.dss-login-gesture.json
plugins/login-gesture/loginPlugin/: gestureloginmodule.cpp  gestureloginmodule.h
plugins/login-gesture/resetDialog/: gesturedialog.cpp  gesturedialog.h  main.cpp  resetdialog.qrc  resetpatterncontroller.cpp  resetpatterncontroller.h
plugins/login-gesture/src/: gestureauthworker.cpp  gestureauthworker.h  gesturemodifyworker.cpp  gesturemodifyworker.h  gesturepannel.cpp  gesturepannel.h  modulewidget.cpp  modulewidget.h  waypointmodel.cpp  waypointmodel.h  waypointwidget.cpp  waypointwidget.h
plugins/login-gesture/translations/: login-gesture_ca.ts  login-gesture_de_DE.ts  login-gesture_en.ts  login-gesture_es.ts  login-gesture_fi.ts  login-gesture_fr.ts  login-gesture_hu.ts  login-gesture_ja.ts  login-gesture_nl.ts  login-gesture_pl.ts  login-gesture_pt_BR.ts  login-gesture_ru.ts  login-gesture_sq.ts  login-gesture_tr.ts  login-gesture_uk.ts  login-gesture_zh_CN.ts  login-gesture_zh_HK.ts  login-gesture_zh_TW.ts
plugins/login-gesture/utils/: tokenCrypt.h  translastiondoc.cpp  translastiondoc.h  userservice.cpp  userservice.h
plugins/one-key-login/: CMakeLists.txt  login.json  login_module.cpp  login_module.h
rpm/: dde-session-shell.spec
scripts/: lightdm-deepin-greeter
src/pam-inhibit-autologin/: CMakeLists.txt  pam_inhibit_autologin.c
tests/: CMakeLists.txt  test-recoverage.sh  test_gm.cc  wayland_test.cc
tests/dde-lock/: CMakeLists.txt  main.cpp  unit_test.cpp  unit_test.h  ut_authenticationmodule.cpp  ut_authfingerprint.cpp  ut_authmodule.cpp  ut_authpassword.cpp  ut_authsingle.cpp  ut_authukey.cpp  ut_controlwidget.cpp  ut_deepinauthframework.cpp  ut_dpasswordeditex.cpp  ut_fullscreenbackground.cpp  ut_hibernatewidget.cpp  ut_inhibitbutton.cpp  ut_inhibitwarnview.cpp  ut_interface.cpp  ut_kblayoutwidget.cpp  ut_keyboardplantformwayland.cpp  ut_lockcontent.cpp  ut_lockframe.cpp  ut_lockpasswordwidget.cpp  ut_lockworker.cpp  ut_loginbutton.cpp  ut_logowidget.cpp  ut_multiscreenmanager.cpp  ut_multiuserswarningview.cpp  ut_propertygroup.cpp  ut_sessionbasemodel.cpp  ut_shutdownwidget.cpp  ut_systemmonitor.cpp  ut_timewidget.cpp  ut_useravatar.cpp  ut_userbutton.cpp  ut_userframe.cpp  ut_userloginfo.cpp  ut_userloginwidget.cpp  ut_xkbparser.cpp
tests/lightdm-deepin-greeter/: CMakeLists.txt  main.cpp  ut_authpassword.cpp  ut_authukey.cpp  ut_greeterworker.cpp  ut_hibernatewidget.cpp  ut_lockpasswordwidget.cpp  ut_logincontent.cpp  ut_logintipswindow.cpp  ut_loginwindow.cpp  ut_sessionwidget.cpp  ut_userloginfo.cpp  ut_userloginwidget.cpp
translations/: dde-session-shell.ts  dde-session-shell_ady.ts  dde-session-shell_af.ts  dde-session-shell_af_ZA.ts  dde-session-shell_ak.ts  dde-session-shell_am.ts  dde-session-shell_am_ET.ts  dde-session-shell_ar.ts  dde-session-shell_ar_EG.ts  dde-session-shell_ast.ts  dde-session-shell_az.ts  dde-session-shell_bg.ts  dde-session-shell_bn.ts  dde-session-shell_bo.ts  dde-session-shell_bqi.ts  dde-session-shell_br.ts  dde-session-shell_ca.ts  dde-session-shell_cgg.ts  dde-session-shell_cs.ts  dde-session-shell_da.ts  dde-session-shell_de.ts  dde-session-shell_de_CH.ts  dde-session-shell_de_DE.ts  dde-session-shell_el.ts  dde-session-shell_el_GR.ts  dde-session-shell_en.ts  dde-session-shell_en_AU.ts  dde-session-shell_en_GB.ts  dde-session-shell_en_NO.ts  dde-session-shell_en_US.ts  dde-session-shell_eo.ts  dde-session-shell_es.ts  dde-session-shell_es_419.ts  dde-session-shell_es_AR.ts  dde-session-shell_es_CL.ts  dde-session-shell_es_MX.ts  dde-session-shell_et.ts  dde-session-shell_eu.ts  dde-session-shell_fa.ts  dde-session-shell_fi.ts  (+67 more)
unittest/: CMakeLists.txt  main.cpp  unit_test.cpp  unit_test.h
(+385 files in other folders)
